<resources>
    <string name="app_name">FastPay</string>

    <!--Main Activity -->
    <string name="get_money">Sacar Dinero</string>
    <string name="deposity_money">Ingresar Dinero</string>
    <string name="help">Ayuda</string>
    <string name="options">Opciones</string>
    <string name="accesories">Accesorios</string>
    <string name="habitual_operations">Operaciones Habituales</string>
    <string name="another_operations">Otras Operaciones</string>
    <string name="ingress">Retirar</string>
    <string name="title_activity_select_account">FastPay</string>
</resources>

